# uv-fastapi-template-base

./: .gitignore  .pre-commit-config.yaml  Dockerfile  compose.yaml  multistage.Dockerfile  pyproject.toml
.github/workflows/: ci.yaml
src/app/: main.py
src/utils/: logger.py  logging_formatter.py
tests/: test_logging_formatter.py  test_root.py
